Added JG2401 from ASCII Text Signature Generator

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<!--
+      _  _____ ___  _  _    ___  __ 
+     | |/ ____|__ \| || |  / _ \/_ |
+     | | |  __   ) | || |_| | | || |
+ _   | | | |_ | / /|__   _| | | || |
+| |__| | |__| |/ /_   | | | |_| || |
+ \____/ \_____|____|  |_|  \___/ |_|
+                                    
+-->
+
 <html lang="en">
   <head>
     <title>Title</title>
@@ -56,7 +66,7 @@
               <div class="header_hero_content mt-45">
               <h5 class="header_sub_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Hello I'm</h5>
               <h2 class="header_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">JG2401</h2>
-              <span class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Professional C# Developer</span>
+              <span class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Professional software developer specializing in C#</span>
             </div> 
               </div>
               <div class="col-lg-6 col-md-6 col-sm-7">
@@ -149,8 +159,32 @@
 
 
       </section>
-    
 
+
+      <footer id="footer" class="footer_area gray-bg pt-115 pb-120">
+        <div class="container">
+        <div class="row">
+        <div class="col-lg-12">
+        <div class="footer_content text-center">
+        <ul class="footer_social">
+        <li><a href="#"><i class="lni lni-facebook"></i></a></li>
+        <li><a href="#"><i class="lni lni-twitter"></i></a></li>
+        <li><a href="#"><i class="lni lni-instagram"></i></a></li>
+        <li><a href="#"><i class="lni lni-linkedin"></i></a></li>
+        </ul>        
+        <ul class="footer_menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
+        </ul>
+        </div> 
+        </div>
+        </div> 
+        </div> 
+        </footer>
 
   </body>
 </html>
